--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,34 @@
 apply plugin: "idea"
 
-subprojects {
+buildscript {
+    ext.kotlin_version = '1.0.5'
     repositories {
         mavenCentral()
     }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+apply plugin: 'java'
+apply plugin: 'kotlin'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.8.0"
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+sourceSets {
+    main.kotlin.srcDirs += 'src/main'
+    test.kotlin.srcDirs += 'src/test'
 }
 
 task wrapper(type: Wrapper) {
