--- a/resources/settings.json
+++ b/resources/settings.json
@@ -2,20 +2,19 @@
   "x":1,
   "y":1,
   "z":1,
+  "n":2,
   "r":1.0,
-  "n":5,
-  "d":10.0,
+  "d":5.0,
   "offset":2.0,
-  "ms":453.0,
-  "kan":80.0,
-  "jex":0.0001,
-  "m":1.0,
+  "kan":8.0e6,
+  "jex":1.0e1,
+  "m":1.0e7,
   "viscosity":1.0,
   "t":0.1,
   "ot":0,
   "ot_theta":1.5707963267948966,
   "ot_phi":0.0,
-  "b_x":0.0,
+  "b_x":1.0e1,
   "b_y":0.0,
   "b_z":0.0,
   "precision":7,
