MAINT: add path to the Mathematica on ubuntu

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,5 @@
 # home windows
 MATHEMATICA_PATH = "E:\\Soft\\Mathematica\\10.4\\MathKernel.exe"
+
+# ubuntu
+# MATHEMATICA_PATH = "/usr/local/bin/MathKernel"
