--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
     compile name: 'JLink'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.11'
