ENH: add logging into file

--- a/resources/settings.json
+++ b/resources/settings.json
@@ -41,5 +41,6 @@
   "resourcesFolder":"./resources",
   "outFolder":"out",
   "picFolder":"pictures",
+  "logFolder":"log",
   "momentaFileName":"momenta.txt"
 }
