--- a/resources/settings.json
+++ b/resources/settings.json
@@ -22,24 +22,24 @@
   "loc_theta":90.0,
   "loc_phi":0.0,
 
-  "ot":2,
+  "ot":0,
   "ot_theta":90.0,
   "ot_phi":0.0,
 
-  "b_x":0.0,
+  "b_x":10.0,
   "b_y":0.0,
   "b_z":0.0,
 
   "time":1.0,
   "timeStep":100,
 
-  "name":"default",
+  "name":"test",
 
   "precision":7,
   "load":false,
   "jsonPath":"./resources/out/sample.json",
 
-  "hysteresis":false,
+  "hysteresis":true,
   "hysteresisSteps":7,
   "hysteresisLogScale":0.1,
 
