ENH: different offsets between cells for different axis and K_an fix

--- a/resources/settings.json
+++ b/resources/settings.json
@@ -4,12 +4,14 @@
   "z":1,
   "n":50,
 
-  "r":1.5,
+  "r":1.25,
   "d":60.0,
-  "offset":4.0,
+  "offset_x":4.0,
+  "offset_y":4.0,
+  "offset_z":4.0,
 
   "m":800.0,
-  "kan":0.0165,
+  "kan":8000.0,
   "jex":5.0,
 
   "dipolDistance":30.0,
