--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,9 @@ if (org.gradle.internal.os.OperatingSystem.current().windows) {
 repositories {
     mavenCentral()
     jcenter()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
@@ -50,6 +53,7 @@ dependencies {
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
+    compile name: 'JLink'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
